# rp2040-test

./: Cargo.toml  build.rs
.cargo/: config.toml
debug/: Cargo.toml
debug/src/: main.rs
src/: lib.rs  main.rs
